Estilos generales mobile first

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <header class="encabezado">
@@ -14,7 +15,7 @@
         <div class="producto">
             <p>Nombre de producto</p>
             <p>Descripción de producto</p>
-            <button class="producto_boton"></button>
+            <button class="producto_boton bx bx-chevrons-right"></button>
         </div>
     </main>
 </body>
