Contenido dinámico de página principal con JS. Borramos el contenido estático de ejemplo

--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
         <p>No te pierdas nuestros productos de indumentaria y accesorios varios.</p>
     </header>
     <main>
-        <div class="producto">
-            <p>Nombre de producto</p>
-            <p>Descripción de producto</p>
-            <button class="producto_boton bx bx-chevrons-right"></button>
-        </div>
     </main>
+
+    <script src="JS/script.js"></script>
 </body>
 </html>
