Generamos contenido dinámico para la página de detalles

--- a/detalles.html
+++ b/detalles.html
@@ -12,22 +12,12 @@
         <p>No te pierdas nuestros productos de indumentaria y accesorios varios.</p>
     </header>
     <article>
-        <h2>Nombre</h2>
-        <p>Descripción breve</p>
-        <img src="img/ejemplo.jpg" alt="bolso">
-        <p>Descripción completa. Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-        <p>Precio</p>
-        <ul class="calificacion">
-            <li class="bx bxs-star"></li>
-            <li class="bx bxs-star"></li>
-            <li class="bx bxs-star"></li>
-            <li class="bx bxs-star"></li>
-            <li class="bx bxs-star"></li>
-        </ul>
+        
     </article>
     <div class="volver">
         <a href="index.html" class="bx bxs-chevrons-left">Volver</a>
     </div>
     
+    <script src="JS/detalles.js"></script>
 </body>
 </html>
