--- a/detalles.html
+++ b/detalles.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="shortcut icon" href="img/favicon/favicon-32x32.png" sizes="16x16 32x32">
 </head>
 <body>
     <header class="encabezado">
