--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Trabajo final 2 para Argentina Programa 4.0">
+    <meta name="author" content="Ariel Vegas">
     <title>Productos</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="shortcut icon" href="img/favicon/favicon-32x32.png" sizes="16x16 32x32">
